Docker Hub Ready: Production-ready Docker images and deployment scripts

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,17 +3,28 @@ FROM node:18-alpine
 # Set working directory
 WORKDIR /app
 
+# Install dumb-init for proper signal handling
+RUN apk add --no-cache dumb-init
+
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S webhook -u 1001
+
 # Copy package files
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm ci --only=production && npm cache clean --force
 
 # Copy source code
 COPY . .
 
-# Create database directory
-RUN mkdir -p /app/database
+# Create database directory and set permissions
+RUN mkdir -p /app/database && \
+    chown -R webhook:nodejs /app
+
+# Switch to non-root user
+USER webhook
 
 # Expose port
 EXPOSE 3002
@@ -22,5 +33,6 @@ EXPOSE 3002
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD node -e "require('http').get('http://localhost:3002/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
 
-# Start application
+# Start application with dumb-init
+ENTRYPOINT ["dumb-init", "--"]
 CMD ["node", "app.js"]
