🔧 Fix: Frontend Dockerfile - Remove duplicate nginx group creation
✅ Problem Fixed:
- Removed addgroup command for nginx group (already exists in nginx:alpine)
- Kept adduser command to create webhook user
- Dockerfile now compatible with nginx:alpine base image

🐳 Build Status:
- Backend: ✅ Ready (ai-analyst-silhouette/webhook-redistributor-backend:latest)
- Frontend: ✅ Fixed (ready for build and push)

🚀 Next Steps:
- Test frontend build on server
- Run ./build-and-push.sh to push both images
- Deploy with ./deploy-server.sh

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -22,8 +22,7 @@ FROM nginx:alpine
 RUN apk add --no-cache dumb-init
 
 # Create non-root user
-RUN addgroup -g 1001 -S nginx && \
-    adduser -S webhook -u 1001 -G nginx
+RUN adduser -S webhook -u 1001 -G nginx
 
 # Copy built app to nginx
 COPY --from=build /app/build /usr/share/nginx/html
