--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       - NODE_ENV=production
       - PORT=3002
       - DB_PATH=/app/database/webhook_redistributor.db
+      - TZ=America/Sao_Paulo
+      - WEBHOOK_TIMEOUT=5000
+      - MAX_RETRIES=3
+      - LOG_LEVEL=info
     volumes:
       - webhook_data:/app/database
     networks:
@@ -34,7 +38,10 @@ services:
   webhook-frontend:
     image: ai-analyst-silhouette/webhook-redistributor-frontend:latest
     environment:
+      - NODE_ENV=production
       - REACT_APP_API_URL=https://redistribuidor-back.silhouetteexperts.com.br
+      - REACT_APP_FRONTEND_URL=https://redistribuidor-front.silhouetteexperts.com.br
+      - TZ=America/Sao_Paulo
     networks:
       - webhook_network
     deploy:
@@ -51,8 +58,49 @@ services:
         - "traefik.http.routers.webhook-frontend.tls.certresolver=letsencrypt"
         - "traefik.http.services.webhook-frontend.loadbalancer.server.port=80"
 
+  # Traefik Reverse Proxy
+  traefik:
+    image: traefik:v2.10
+    container_name: traefik
+    restart: unless-stopped
+    environment:
+      - TRAEFIK_API_DASHBOARD=true
+      - TRAEFIK_API_INSECURE=false
+      - TRAEFIK_PROVIDERS_DOCKER=true
+      - TRAEFIK_PROVIDERS_DOCKER_EXPOSEDBYDEFAULT=false
+      - TRAEFIK_PROVIDERS_DOCKER_NETWORK=webhook_network
+      - TRAEFIK_ENTRYPOINTS_WEB_ADDRESS=:80
+      - TRAEFIK_ENTRYPOINTS_WEBSECURE_ADDRESS=:443
+      - TRAEFIK_CERTIFICATESRESOLVERS_LETSENCRYPT_ACME_TLSCHALLENGE=true
+      - TRAEFIK_CERTIFICATESRESOLVERS_LETSENCRYPT_ACME_EMAIL=admin@silhouetteexperts.com.br
+      - TRAEFIK_CERTIFICATESRESOLVERS_LETSENCRYPT_ACME_STORAGE=/letsencrypt/acme.json
+      - TRAEFIK_LOG_LEVEL=INFO
+      - TRAEFIK_ACCESSLOG=true
+      - TZ=America/Sao_Paulo
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - traefik_letsencrypt:/letsencrypt
+    networks:
+      - webhook_network
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 128M
+
 volumes:
   webhook_data:
+    driver: local
+  traefik_letsencrypt:
     driver: local
 
 networks:
