--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
         max_attempts: 5
       labels:
         - traefik.enable=true
+        - traefik.docker.network=traefik_public
         - traefik.http.routers.webhook-backend.rule=Host(`redistribuidor-back.silhouetteexperts.com.br`)
         - traefik.http.routers.webhook-backend.service=webhook-backend
         - traefik.http.routers.webhook-backend.entrypoints=websecure
@@ -55,6 +56,7 @@ services:
         max_attempts: 5
       labels:
         - traefik.enable=true
+        - traefik.docker.network=traefik_public
         - traefik.http.routers.webhook-frontend.rule=Host(`redistribuidor-front.silhouetteexperts.com.br`)
         - traefik.http.routers.webhook-frontend.service=webhook-frontend
         - traefik.http.routers.webhook-frontend.entrypoints=websecure
