feat: atualizar configurações de produção e branding
- Configurar frontend para usar subdomínios de produção
- Atualizar título da aplicação para 'Webhook Redistributor'
- Substituir favicon e ícones pela logo quadrada
- Corrigir import do config em Settings.js
- Atualizar docker-compose.yml para usar imagens locais
- Melhorar descrição e metadados da aplicação

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,6 +12,11 @@ RUN npm ci && npm cache clean --force
 # Copy source code
 COPY . .
 
+# Set production environment variables
+ENV REACT_APP_API_URL=https://redistribuidor-back.silhouetteexperts.com.br
+ENV REACT_APP_FRONTEND_URL=https://redistribuidor-front.silhouetteexperts.com.br
+ENV GENERATE_SOURCEMAP=false
+
 # Build the app
 RUN npm run build
 
