--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "1.0.2",
   "private": true,
   "proxy": "http://localhost:3002",
   "dependencies": {
@@ -18,9 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "node scripts/update-version.js && react-scripts build",
+    "build:prod": "node scripts/update-version.js && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "update-version": "node scripts/update-version.js"
   },
   "eslintConfig": {
     "extends": [
