feat: modernize logs and stats pages with section-header layout
- Refactor logs page to use page-logs + logs-manager structure
- Refactor stats page to use page-stats + stats-manager structure
- Separate section-header from content managers as grid siblings
- Increase container widths (logs: 150vw, stats: 300vw)
- Add 30px gap between section-header and content managers
- Standardize page-title structure with icon-img class
- Apply responsive design with media queries
- Ensure consistent layout across all main pages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       mode: replicated
       replicas: 1
       restart_policy:
-        condition: any
+        condition: on-failure
         delay: 5s
         max_attempts: 5
       labels:
@@ -46,7 +46,7 @@ services:
       mode: replicated
       replicas: 1
       restart_policy:
-        condition: any
+        condition: on-failure
         delay: 5s
         max_attempts: 5
       labels:
