feat: configure project for production with subdomain backend
- Update CORS configuration for production domains
- Fix localhost:3002 references in frontend components
- Configure backend to use port 3002 (matching production)
- Remove proxy from package.json for production builds
- Update Docker Compose to use correct backend port
- Add FRONTEND_URL environment variable
- Ensure all webhook URLs use correct production subdomain
- Maintain localhost:3001 for development environment

Backend URL: https://redistribuidor-back.silhouetteexperts.com.br/
Frontend URL: https://redistribuidor-front.silhouetteexperts.com.br/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - WEBHOOK_TIMEOUT=5000
       - MAX_RETRIES=3
       - LOG_LEVEL=info
+      - FRONTEND_URL=https://redistribuidor-front.silhouetteexperts.com.br
     volumes:
       - webhook_data:/app/database
     networks:
