--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,13 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3002
-      - DB_PATH=/app/database/webhook_redistributor.db
+      - DB_TYPE=postgresql
+      - DB_HOST=postgressql.silhouetteexperts.com.br
+      - DB_PORT=5432
+      - DB_NAME=redistribuidor_webhooks
+      - DB_USER=postgres
+      - DB_PASSWORD=wZcW`785fMp?
+      - DB_SSL=true
       - TZ=America/Sao_Paulo
       - WEBHOOK_TIMEOUT=5000
       - MAX_RETRIES=3
