--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -17,11 +17,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "node scripts/update-version.js && react-scripts build",
-    "build:prod": "node scripts/update-version.js && react-scripts build",
+    "build": "node scripts/auto-version.js && react-scripts build",
+    "build:prod": "node scripts/auto-version.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "update-version": "node scripts/update-version.js"
+    "update-version": "node scripts/update-version.js",
+    "auto-version": "node scripts/auto-version.js"
   },
   "eslintConfig": {
     "extends": [
