feat: Implementação completa do sistema de logs e estatísticas
- Adicionada página de logs com visualização de transações webhook e auditoria
- Implementado dashboard de estatísticas em tempo real
- Configurado auto-refresh a cada 10 segundos
- Ajustado timezone para America/Sao_Paulo em todos os componentes
- Melhorado contraste visual para modo escuro
- Integrado com banco PostgreSQL (logs_webhook e audit_log)
- Adicionada documentação completa do sistema
- Otimizado build e deploy com Docker Swarm

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -23,8 +23,12 @@ RUN npm run build
 # Production stage
 FROM node:18-alpine
 
-# Install dumb-init for proper signal handling
-RUN apk add --no-cache dumb-init
+# Install dumb-init for proper signal handling and timezone data
+RUN apk add --no-cache dumb-init tzdata
+
+# Set timezone
+ENV TZ=America/Sao_Paulo
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # Install serve globally
 RUN npm install -g serve
